0.5.0 4-10-12

add "optional" hwnd_to_track registry setting.  Currently if the window "goes away" then it will just grab black.
If it doesn't exist at start time, it raises an exception.
"delete" the registry key if you want to clear it.

0.4.0 2-12

fix mouse bug, make it "really" respond to registry changes for window size (window can move)

0.3.9 2-27-12
  make it respond to registry changes for (for now just position, not size...ask me if you want the other)

0.3.8 1-5-12 
  bring audio skipper back to a known release
  minor verbiage tweaks

0.3.7 1-3-12
  allow it to work on multiple monitors.

0.3.6 12-2-11
  bump virtual audio device version
  add ability to restart audio broadcaster

0.3.5 oct 20 11
  remove CAPTUREBLT oops

0.3.4 10-14-11
  make it work with XP again

0.3.3 9-28-11
  make an easy out way when starting audio server

0.3.2 9-27-11
  make it so that recorder can record anything, make it slightly more robust, too.
    too bad it uses so much disk space...
  add mouse
  
0.3.1 9-26-11
  add a hopefully working, hopefully human friendly self-broadcaster...

0.3.0 9-23-11
 allow SetFormat to accept NULL so that it won't crash flash player. Added an interface, too, but it's un-used I doubt.

0.2.5: 9-21-11:
  fix bug so that VLC will accept it for capture (I consider it VLC's bug, but hey, that's just me :P)
    ok so part my bug, part theirs
  minor aesthetics.
  bundle the audio device driver for vista+ participants

0.2.4: 09-19-11:
  attempt to not register as IAMStreamSource
  small speedup by preferring 24 bps as the default over 32

0.2.3: 9-16-11:
  allow to change fps with dialog

0.2.2:
  make it respond more accurately to GetStreamCaps, for enumeration to work (ffmpeg better at least) and it appears to work better with gstreamer as well.
  minor UI tweaks

0.2.1:
  make it easier to re-register on failed etc.

0.2.0: 
  Even better window drawer (now transparent with java 7)